# Avito_HW

./: .gitignore  CMakeLists.txt  README.md  main.cpp
service/: Dict.cpp  Dict.h  FileHandler.cpp  FileHandler.h
tests/: CMakeLists.txt  Dict_test.cpp  FileHandler_test.cpp
